<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/team_a"
                style="@style/team_name" />

            <TextView
                android:id="@+id/team_a_goals"
                android:text="0"
                style="@style/goals_number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/fouls"
                    style="@style/fouls_textView" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:text="0"
                    style="@style/fouls_and_corners_number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/corners"
                    style="@style/corners_textView" />

                <TextView
                    android:id="@+id/team_a_corners"
                    android:text="0"
                    style="@style/fouls_and_corners_number" />

            </LinearLayout>

            <Button
                android:onClick="addOneGoalForTeamA"
                android:text="@string/goal_button"
                style="@style/buttons" />

            <Button
                android:onClick="addOneFoulForTeamA"
                android:text="@string/foul_button"
                style="@style/buttons" />

            <Button
                android:onClick="addOneCornerForTeamA"
                android:text="@string/corner_button"
                style="@style/buttons" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/team_b"
                style="@style/team_name" />

            <TextView
                android:id="@+id/team_b_goals"
                android:text="0"
                style="@style/goals_number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/fouls"
                    style="@style/fouls_textView" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:text="0"
                    style="@style/fouls_and_corners_number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/corners"
                    style="@style/corners_textView" />

                <TextView
                    android:id="@+id/team_b_corners"
                    android:text="0"
                    style="@style/fouls_and_corners_number" />

            </LinearLayout>

            <Button
                android:onClick="addOneGoalForTeamB"
                android:text="@string/goal_button"
                style="@style/buttons" />

            <Button
                android:onClick="addOneFoulForTeamB"
                android:text="@string/foul_button"
                style="@style/buttons" />

            <Button
                android:onClick="addOneCornerForTeamB"
                android:text="@string/corner_button"
                style="@style/buttons" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:onClick="resetScore"
        android:text="@string/reset_button"
        style="@style/reset_button" />

</RelativeLayout>

